[RLS] Fix layer positioning with iframe borders.

The offset of the <iframe> element's ContentBoxRect is now reflected in the
position of the main GraphicsLayer of the iframe's document.

Without RLS, this position was applied to PLC::overflow_controls_host_layer_
via FrameViewDidChangeLocation.

The position is computed by both the document CLM and the <iframe> element's
CLM.  This is because the compositing update may run in the child frame before
or after the parent frame.

Bug: 746777
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I8815a1b7336330ba7798bc460c21f1acdac7c668
Reviewed-on: https://chromium-review.googlesource.com/717741
Commit-Queue: Steve Kobes <skobes@chromium.org>
Reviewed-by: Stefan Zager <szager@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508878}
Former-commit-id: 4d9b75dd5cb3c54f3b80cabed4b05c29a2133b0f