third_party/WebKit/Source/core/paint/compositing/CompositedLayerMapping.h
@@ -526,6 +526,12 @@ class CORE_EXPORT CompositedLayerMapping final : public GraphicsLayerClient {
   // that layer does not appear earlier in the set of layers for this object.
   bool InvalidateLayerIfNoPrecedingEntry(size_t);
 
+  // ContentsBox() of the CLM for the <iframe> element that owns us.
+  LayoutPoint FrameOwnerContentsLocation() const;
+
+  // Main GraphicsLayer of the CLM for the iframe's content document.
+  GraphicsLayer* FrameContentsGraphicsLayer() const;
+
   PaintLayer& owning_layer_;
 
   // The hierarchy of layers that is maintained by the CompositedLayerMapping
